fixes spacing on start, translates language from norwegian to english on alert, removes code on dev alert, fixes spacing on pcard

--- a/src/components/cards/portrait_card/portrait_card.scss
+++ b/src/components/cards/portrait_card/portrait_card.scss
@@ -70,7 +70,7 @@ $osg-portrait-card-image-height-large: 290px;
   }
 
   &__heading {
-    @extend %osg-heading-4, %osg-margin-bottom-50;
+    @extend %osg-heading-4, %osg-margin-bottom-5;
   }
 
   &__text {
